--- a/server/public/doc/api_project.json
+++ b/server/public/doc/api_project.json
@@ -1,7 +1,7 @@
 {
   "name": "VPS Pets Project Backend",
   "version": "0.0.0",
-  "description": "VPS Pets Project Backend",
+  "description": "VPS Pets Project Backend Documentation",
   "title": "Pets App",
   "url": "/api",
   "groups": [
