--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.1",
+    "mongoose": "^8.9.5",
     "postgres": "^3.4.5",
     "sqlite3": "^5.1.7"
   }
